add defaultPieChartComponent, SmallInfoComponent

--- a/src/App.css
+++ b/src/App.css
@@ -24,5 +24,5 @@
 }
 
 html {  
-  background-color: rgb(17, 17, 17); /* ändere die Farbe entsprechend */
+  background-color: rgb(17, 17, 17); /* ändert die Farbe des Hintergrundes */
 }
